<resources>
    <string name="app_name">UzPrice</string>
    <string name="quotation">все цены у вас в кармане</string>

    <string name="search">Поиск</string>

    <string name="communal">Цены коммунальных услуг</string>
    <string name="products">Цены пищевых продуктов</string>
    <string name="transportation">Транспорт</string>
    <string name="education">Обучение</string>

    <string name="update_communal">Обновить цены коммунальных услуг</string>
    <string name="update_products">Обновить цены пищевых продуктов</string>
    <string name="update_transportation">Обновить цены в разделе "Транспорт"</string>
    <string name="update_education">Обновить цены в разделе "Обучение"</string>
    <string name="update_currency">Обновить валютные данные</string>

    <string name="fuel">Горючее</string>
    <string name="university">Университеты</string>
    <string name="stipend">Стипендии</string>
    <string name="fine">Штрафы</string>
    <string name="ticket">Билеты</string>
    <string name="currency">Валюты</string>
    <string name="calculator">Валютный калькулятор</string>
    <string name="assets">Ценные бумаги</string>
    <string name="tools">Полезные функции</string>
    <string name="water">Теплая и холодная вода</string>
    <string name="electricity">Электричество</string>
    <string name="tuition">Плата за обучение</string>

    <string name="update">Получить последние обновления цен и валют</string>

    <string name="info_title">Информации о валюте:</string>
    <string name="tap2quit">Пожалуйста, коснитесь еще раз чтобы выти из приложения!</string>
</resources>
