<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="toshnazarov.uzprice.UpdateActivity">

    <TextView
        android:id="@+id/update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/gray"
        android:textSize="@dimen/update_title_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/update_title"
        android:layout_marginTop="@dimen/margin_elems">

        <LinearLayout
            android:id="@+id/update_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="updateClick"
                android:orientation="horizontal"
                android:tag="communal">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/communal"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/communal" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/update_communal"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="updateClick"
                android:orientation="horizontal"
                android:tag="products">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/products"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/products" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/update_products"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="updateClick"
                android:orientation="horizontal"
                android:tag="transport">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/transportation"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/transportation" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/update_transportation"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="updateClick"
                android:orientation="horizontal"
                android:tag="tuitionfee">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/education"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/education" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/update_education"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
