<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/transparent"
            android:contentDescription="@string/communal"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/communal" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/communal"
            android:textSize="@dimen/textview_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/transparent"
            android:contentDescription="@string/products"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/products" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/products"
            android:textSize="@dimen/textview_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/transparent"
            android:contentDescription="@string/transportation"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/transportation" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/transportation"
            android:textSize="@dimen/textview_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/transparent"
            android:contentDescription="@string/education"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/education" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/education"
            android:textSize="@dimen/textview_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/transparent"
            android:contentDescription="@string/tools"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tools" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/tools"
            android:textSize="@dimen/textview_font_size" />

    </LinearLayout>

</LinearLayout>