<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edittext_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="1.5dp"
            android:background="@drawable/search_button_background"
            android:contentDescription="@string/search"
            android:src="@drawable/search_icon" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="moveToScreen"
                android:orientation="horizontal"
                android:tag="communal">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/communal"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/communal" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/communal"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="moveToScreen"
                android:orientation="horizontal"
                android:tag="products">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/products"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/products" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/products"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="moveToScreen"
                android:orientation="horizontal"
                android:tag="transport">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/transportation"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/transportation" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/transportation"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="moveToScreen"
                android:orientation="horizontal"
                android:tag="education">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/education"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/education" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/education"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="moveToScreen"
                android:orientation="horizontal"
                android:tag="tools">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/tools"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tools" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/tools"
                    android:textSize="@dimen/textview_font_size" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/tools_container"
        layout="@layout/tools_layout"
        android:visibility="gone" />

    <include
        android:id="@+id/communal_container"
        layout="@layout/communal_layout"
        android:visibility="gone" />

    <include
        android:id="@+id/education_container"
        layout="@layout/education_layout"
        android:visibility="gone" />

    <include
        android:id="@+id/transport_container"
        layout="@layout/transport_layout"
        android:visibility="gone" />

</RelativeLayout>